--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -1,22 +1,8 @@
-:root {
-    --black: red;
-    --white: rgb( 255, 255, 255 );
-}
+// Intialization
+@import '_reset';
+@import '_variables';
+@import '_mixins';
 
-body {
-    background-color: var(--black);
-    color: var(--white);
-}
-
-
-section {
-    background-color: black;
-
-    article {
-        background-color: black;
-
-        div {
-            background-color: black;
-        }
-    }
+.#{$mf} {
+    
 }
