--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -164,41 +164,52 @@ h1 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 h2 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 h3 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 h4 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 h5 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 h6 {
   line-height: 1;
   color: #4d5877;
   font-family: Jomolhari, serif;
+  text-transform: initial;
 }
 
 p {
   line-height: 1.3em;
+  color: #000000;
   font-size: 1.6rem;
+}
+
+.mf__heading-3 {
+  font-size: 3rem;
 }
 
 .mf__separator {
@@ -230,6 +241,7 @@ p {
   background-color: #4d5877 !important;
   border-color: #ffffff !important;
   color: #ffffff !important;
+  text-decoration: none;
 }
 
 .mf__nav-item:hover {
@@ -321,6 +333,7 @@ p {
   background-color: #ffffff !important;
   border-color: #4d5877 !important;
   color: #4d5877 !important;
+  text-decoration: none;
 }
 
 .mf__homepage-video__heading-3:hover {
@@ -331,6 +344,7 @@ p {
 .mf__features__h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .mf__features__p {
@@ -436,6 +450,176 @@ p {
 .mf__feature__copy {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
+}
+
+.mf__video {
+  background-color: #F7F2EF;
+}
+
+.mf__video__video {
+  display: block;
+  margin: 0 auto;
+  max-width: 60%;
+}
+
+.mf__register__buttons {
+  background-color: #4d5877;
+  color: #ffffff;
+}
+
+.mf__register__buttons__inner {
+  display: flex;
+}
+
+.mf__register__buttons__inner > * {
+  display: flex;
+  flex-basis: 50%;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.mf__register__buttons .mf__heading-3 {
+  color: #ffffff;
+  margin-bottom: 2rem;
+}
+
+.mf__register__buttons p {
+  color: #ffffff;
+  margin-bottom: 2rem;
+}
+
+.mf__register__buttons__button {
+  background-color: #ffffff;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  color: #4d5877;
+  font-size: 1.8rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  transition: all 200ms ease-in-out;
+  font-family: Jomolhari, serif;
+  font-weight: 700;
+}
+
+.mf__register__buttons__button:hover {
+  background-color: #4d5877;
+  border-color: #ffffff;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.mf__footer {
+  background: url("/frontend/template/assets/img/bg2s.jpg") no-repeat center center;
+  background-size: cover;
+  padding: 10rem 0 !important;
+}
+
+.mf__footer__inner {
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media (max-width: 599px) {
+  .mf__footer__inner {
+    flex-wrap: wrap;
+  }
+}
+
+.mf__footer__inner > * {
+  flex: 0 0 auto;
+}
+
+@media (max-width: 599px) {
+  .mf__footer__inner > * {
+    flex-basis: 100%;
+  }
+}
+
+.mf__footer__inner > * {
+  display: flex;
+  flex-basis: 25%;
+  justify-content: center;
+  padding-right: 2rem;
+}
+
+@media (max-width: 899px) {
+  .mf__footer__inner > * {
+    flex-basis: 50%;
+  }
+}
+
+@media (max-width: 599px) {
+  .mf__footer__inner > * {
+    flex-basis: 100%;
+  }
+}
+
+.mf__footer__inner > *:first-child {
+  justify-content: flex-start;
+}
+
+.mf__footer__inner > *:last-child {
+  justify-content: flex-end;
+  padding-right: 0;
+}
+
+.mf__footer li {
+  margin-bottom: 2rem;
+}
+
+.mf__footer li:last-child {
+  margin-bottom: 0;
+  padding-right: 0;
+}
+
+.mf__footer li .mf__app-icons {
+  width: 100%;
+}
+
+.mf__footer li .mf__app-icons-con {
+  display: block;
+  max-width: 160px;
+}
+
+.mf__footer h4 {
+  color: #ffffff;
+  font-size: 2.2rem;
+}
+
+.mf__footer p {
+  color: #ffffff;
+}
+
+.mf__footer a {
+  color: #ffffff;
+}
+
+.mf__footer__socials {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mf__footer__socials__social {
+  margin-bottom: 0 !important;
+  padding-right: 1rem;
+}
+
+.mf__footer__socials__social:last-child {
+  padding-right: 0;
+}
+
+.mf__footer__socials__social--first {
+  flex-basis: 100%;
+  margin-bottom: 2rem !important;
+  padding-right: 0;
+}
+
+.mf__footer__socials i {
+  color: #ffffff;
+  font-size: 3rem;
 }
 
 html .header-body {
