--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -41,12 +41,13 @@
     text-decoration: $text-decoration;
 }
 
-@mixin button-hover( $button: button, $background-color: var(--purple), $border-color: $background-color, $color: var(--black) ) {
+@mixin button-hover( $button: button, $background-color: var(--purple), $border-color: $background-color, $color: var(--black), $text-decoration: none ) {
     @if $button == button {
         &:hover {
             background-color: $background-color;
             border-color: $border-color;
             color: $color;
+            text-decoration: $text-decoration;
         }
     } @else if $button == outside_link {
         &:hover button {
@@ -61,6 +62,7 @@
         
             a {
                 color: $color;
+                text-decoration: $text-decoration;
             }
         }
     }
